# tinted-aviutl2

./: .gitignore  Cargo.toml  README.md  Rakefile  about.hbs  about.toml  aviutl2.toml  mise.toml  translation.aul2
demo/: NOTICE.md  demo.aup2
i18n/: English.tinted-aviutl2.aul2
src/: gui.rs  lib.rs  merge_style.rs  theme.rs
templates/: base.mustache  config.yaml  default.mustache  informations.mustache  original.mustache  rainbow.mustache
tests/: merge_style.rs
themes/: base16-0x96f.style.conf  base16-3024.style.conf  base16-apathy.style.conf  base16-apprentice.style.conf  base16-ascendancy.style.conf  base16-ashes.style.conf  base16-atelier-cave-light.style.conf  base16-atelier-cave.style.conf  base16-atelier-dune-light.style.conf  base16-atelier-dune.style.conf  base16-atelier-estuary-light.style.conf  base16-atelier-estuary.style.conf  base16-atelier-forest-light.style.conf  base16-atelier-forest.style.conf  base16-atelier-heath-light.style.conf  base16-atelier-heath.style.conf  base16-atelier-lakeside-light.style.conf  base16-atelier-lakeside.style.conf  base16-atelier-plateau-light.style.conf  base16-atelier-plateau.style.conf  base16-atelier-savanna-light.style.conf  base16-atelier-savanna.style.conf  base16-atelier-seaside-light.style.conf  base16-atelier-seaside.style.conf  base16-atelier-sulphurpool-light.style.conf  base16-atelier-sulphurpool.style.conf  base16-atlas.style.conf  base16-ayu-dark.style.conf  base16-ayu-light.style.conf  base16-ayu-mirage.style.conf  base16-aztec.style.conf  base16-bespin.style.conf  base16-black-metal-bathory.style.conf  (+271 more)
(+940 files in other folders)
