[package]
name = "tinted-aviutl2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aviutl2 = "0.15.1"
aviutl2-eframe = "0.15.1"
include_dir = "0.7.4"
lazy-regex = "3.5.1"
native-dialog = "0.9.6"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
