[package]
name = "tinted-aviutl2"
version = "0.2.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aviutl2 = "0.16.0"
aviutl2-eframe = "0.16.0"
dedent = "0.1.1"
include_dir = "0.7.4"
lazy-regex = "3.5.1"
native-dialog = "0.9.6"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
insta = "1.46.3"
